log
do., 13 de mar. de 2022 12:11:33: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
bash: gcc: command not found
Compilation failed
d52f2d1
do., 13 de mar. de 2022 12:12:01: 
bash: gcc: command not found
Compilation failed
8aef79a
do., 13 de mar. de 2022 18:32:40: 
bash: gcc: command not found
Compilation failed
907e63b
Sun Mar 13 19:48:46 HSP 2022: 
In file included from test.c:5:0:
exercises.c:43:6: error: redefinition of 'sumaNultimos'
 void sumaNultimos(int a[], int n, int m, int * suma) {
      ^~~~~~~~~~~~
exercises.c:21:6: note: previous definition of 'sumaNultimos' was here
 void sumaNultimos(int a[], int n, int m, int *suma){
      ^~~~~~~~~~~~
Compilation failed
837da09
Sun Mar 13 19:49:24 HSP 2022: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|6
total_score: 10/70
55bbdab
Sun Mar 13 19:58:57 HSP 2022: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 20/70
85fe284
